--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="sass.html">Home</a></li>
-                <li><a href="badges.html">Aboutme</a></li>
-                <li><a href="collapsible.html">Projects</a></li>
+                <li><a href="badges.html">Projects</a></li>
+                <li><a href="collapsible.html">Aboutme</a></li>
                 <li><a href="mobile.html">Contacts</a></li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
