--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 
-    <div id="index-banner" class="parallax-container">
+   <!-- <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
             <div class="container">
                 <br><br>
@@ -54,8 +54,40 @@
 
             </div>
         </div>
-        <div class="parallax"><img src="black1.jpg" alt="Unsplashed background img 1"></div>
-    </div>
+    
+    </div>-->
+      <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="1.png"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>Sangeerththani Ramesh</h3>
+          <h5 class="light grey-text text-lighten-3">website</h5>
+        </div>
+      </li>
+      <li>
+        <img src="black1.jpg"> <!-- random image -->
+        <div class="caption left-align">
+          <h3>Left Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="Development.png"> <!-- random image -->
+        <div class="caption right-align">
+          <h3>Right Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="Download.jpg"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+    </ul>
+  </div>
 
  <div class="fixed-action-btn horizontal click-to-toggle">
     <a class="btn-floating btn-large red">
@@ -178,6 +210,10 @@
     <script>
         $(document).ready(function() {})
         $(".button-collapse").sideNav();
+        
+          $(document).ready(function(){
+      $('.slider').slider();
+    });
     </script>
 
 </body>
